<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Promedio Uninorte | Alvaro Reyes</string>
    <string name="add_student">Agregar Estudiante</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="cum_avg_dots">Promedio Acumulado:</string>
    <string name="sem_avg">Promedio Semestre</string>
    <string name="calc_avg">Calcular Promedio</string>
    <string name="ins_data">Ingresar Datos</string>
    <string name="calc">Calcular</string>
    <string name="save">Guardar</string>
    <string name="calc_subject_grade">Calcular Nota de Materia</string>
    <string name="ins_new_subject">Ingresar Nueva Materia</string>
    <string name="calc_grade">Calcular Nota</string>
    <string name="edit_grade">Editar Notas</string>
    <string name="del_subject">Retirar Materia</string>
    <string name="actual_avg">Promedio Actual: </string>
    <string name="desired_avg">Promedio Deseado: </string>
    <string name="num_credits_done">Numero de creditos cursados:</string>
    <string name="cum_avg">Promedio Acumulado</string>
    <string name="final_grade">Nota Final Deseada: </string>
    <string name="credits_comp">Numero de Creditos Cursados: </string>
    <string name="subject_credits">Numero de Creditos: </string>
    <string name="num_grades">Numero de Notas : </string>
    <string name="name_subject">Nombre de la Materia: </string>
    <string name="ins_user">Usuario del Estudiante:</string>
    <string name="del_subject_txt">¿Esta seguro que desea eliminar esta materia?</string>
    <string name="grade_name">Nota</string>
    <string name="pct">Porcentaje</string>
    <string name="actual_grade">Nota Actual</string>

</resources>
