<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/opssubject_calc_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/calc_grade" />

    <Button
        android:id="@+id/opsubject_edit_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opssubject_calc_grade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/edit_grade" />

    <Button
        android:id="@+id/opsubject_del_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opsubject_edit_grade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/del_subject" />

</RelativeLayout>
