<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/mat_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mat_name_txt"
        android:layout_below="@+id/mat_name_txt"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:imeOptions="flagNoFullscreen"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/credits_done_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mat_name_edit"
        android:layout_below="@+id/mat_name_edit"
        android:layout_marginTop="20dp"
        android:text="@string/subject_credits"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/credits_done_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/credits_done_txt"
        android:layout_below="@+id/credits_done_txt"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:imeOptions="flagNoFullscreen"
        android:inputType="number" />

    <TextView
        android:id="@+id/grades_total_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/credits_done_edit"
        android:layout_below="@+id/credits_done_edit"
        android:layout_marginTop="20dp"
        android:text="@string/num_grades"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/grades_totel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/grades_total_txt"
        android:layout_below="@+id/grades_total_txt"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:imeOptions="flagNoFullscreen"
        android:inputType="number" />

    <TextView
        android:id="@+id/mat_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/name_subject"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/pm_inssubject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grades_totel_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</RelativeLayout>
